--- a/pages/index.html
+++ b/pages/index.html
@@ -9,14 +9,14 @@
 <body>
   <header class="header">
     <div class="container">
-      <nav class="nav">
-        <a href="#home">Home</a>
-        <a href="#donation-locations">Onde Doar</a>
-        <a href="#about">Como Doar</a>
-        <a href="#projects">Projetos</a>
-        <a href="#contact">Contatos</a>
-      </nav>
-    </div>
+		  <nav class="nav">
+			<a href="../pages/index.html">Home</a>
+			<a href="../pages/where_to.html">Onde Doar</a>
+			<a href="#about">Como Doar</a>
+			<a href="#projects">Projetos</a>
+			<a href="#contact">Contatos</a>
+		  </nav>
+		</div>
   </header>
 
   
