Alterações na navbar para as páginas

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
 			<ul>
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="where_to.html">ONDE DOAR</a></li>
-				<li><a href="where_to.html">COMO DOAR</a></li>
+				<li><a href="how_to.html">COMO DOAR</a></li>
 				<li><a href="">CONTEÚDOS</a></li>
 				<!-- <li><a href="contatos.html">CONTATOS</a></li> -->
 				<!-- <li><a href="parceiros.html">MARCAS</a></li> -->
