--- a/pages/where_to.html
+++ b/pages/where_to.html
@@ -79,9 +79,9 @@
 		  <nav class="nav">
 			<a href="../pages/index.html">Home</a>
 			<a href="../pages/where_to.html">Onde Doar</a>
-			<a href="#about">Como Doar</a>
+			<a href="./how_to.html">Como Doar</a>
 			<a href="#projects">Projetos</a>
-			<a href="#contact">Contatos</a>
+			<a href="./contact.html">Contatos</a>
 		  </nav>
 		</div>
 	  </header>
