--- a/pages/index.html
+++ b/pages/index.html
@@ -122,6 +122,8 @@
           <ul id="routes-list"></ul>
         </div>
       </section>
+      <script src="../scripts/route.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChwQ9MO2u6FpfLgUomQSaGr6khB2bGrBc&libraries=places&callback=initMap" async defer></script>
       
   </main>
 
