Página "Como Doar" e atualizações de css

--- a/pages/how_to.html
+++ b/pages/how_to.html
@@ -3,7 +3,109 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Como doar</title>
+		<link rel="stylesheet" href="../styles/how_to.css" />
+		<title>Como doar - Doar + Recife</title>
 	</head>
-	<body></body>
+	<body>
+		<header class="header">
+			<div class="container-header">
+				<nav class="nav">
+					<a href="./index.html">Home</a>
+					<a href="./where_to.html">Onde Doar</a>
+					<a href="./contact.html">Contatos</a>
+				</nav>
+			</div>
+		</header>
+
+		<div class="container-main">
+			<h1>Como Doar Alimentos</h1>
+
+			<section class="intro">
+				<p>
+					Doar alimentos é uma maneira poderosa de combater a fome e promover
+					solidariedade. Saiba como fazer sua doação de forma segura e impactante!
+				</p>
+			</section>
+
+			<section class="why-donate">
+				<h2>Por que doar alimentos?</h2>
+				<img class="food" src="../src/ZEEBBOHPAC2S7LFEQVPTCS2U7Y.webp" alt="" />
+				<p>
+					Milhares de pessoas enfrentam insegurança alimentar todos os dias. Suas
+					doações ajudam a fornecer refeições nutritivas para famílias necessitadas.
+				</p>
+				<ul>
+					<li>Reduzir o desperdício de alimentos.</li>
+					<li>Garantir que mais pessoas tenham acesso à nutrição básica.</li>
+					<li>Fortalecer comunidades locais.</li>
+				</ul>
+			</section>
+
+			<section class="what-donate">
+				<h2>O que doar?</h2>
+				<img
+					class="food"
+					src="../src/alimentos.webp"
+					alt="imagem de alimentos em caixa de madeira"
+				/>
+				<p>
+					Priorize alimentos não perecíveis e em bom estado. Veja os itens mais
+					procurados:
+				</p>
+				<ul>
+					<li>Arroz e feijão.</li>
+					<li>Macarrão e farinha.</li>
+					<li>Açúcar e sal.</li>
+					<li>Óleo de cozinha.</li>
+					<li>Leite em pó.</li>
+					<li>Conservas (sardinhas, atum).</li>
+				</ul>
+				<p><strong>Dica:</strong> Verifique a data de validade antes de doar.</p>
+			</section>
+
+			<section class="how-donate">
+				<h2>Como doar?</h2>
+				<ol>
+					<li>
+						Selecione alimentos em bom estado e que estejam dentro do prazo de
+						validade.
+					</li>
+					<li>Organize os itens em caixas ou sacolas para transporte seguro.</li>
+					<li>
+						Localize um ponto de doação confiável próximo a você (consulte nossa
+						página "Onde Doar").
+					</li>
+					<li>
+						Entregue os alimentos no local indicado ou agende a retirada, se
+						disponível.
+					</li>
+				</ol>
+				<br />
+				<p>
+					Você também pode organizar sua própria rota de doação de comida na nossa
+					página principal!
+				</p>
+			</section>
+
+			<section class="donation-tips">
+				<h2>Dicas de Segurança</h2>
+				<ul>
+					<li>
+						Certifique-se de que os alimentos estão bem armazenados e embalados.
+					</li>
+					<li>Prefira doar em instituições ou campanhas reconhecidas.</li>
+					<li>Evite doações de itens perecíveis sem refrigeração adequada.</li>
+				</ul>
+			</section>
+		</div>
+
+		<footer class="footer">
+			<div class="container">
+				<p>&copy; 2024 Projeto ODS2 - Todos os direitos reservados.</p>
+			</div>
+		</footer>
+
+		<button class="back-to-top" onclick="scrollToTop()">↑</button>
+		<script src="../scripts/how_to.js"></script>
+	</body>
 </html>
