Edição da página de Contatos

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,10 +18,17 @@
 			</div>
 		</header>
 
-		<div class="container">
+		<div class="container-list">
 			<h1>Contatos</h1>
 			<div id="contactsList" class="contacts-list"></div>
 		</div>
+
+		<footer class="footer">
+			<div class="container">
+				<p>&copy; 2024 Projeto ODS2 - Todos os direitos reservados.</p>
+			</div>
+		</footer>
+
 		<button class="back-to-top" onclick="scrollToTop()">↑</button>
 
 		<script src="../scripts/contacts.js"></script>
