Atualização da página home com detalhes de projetos e botão back to top

--- a/pages/index.html
+++ b/pages/index.html
@@ -107,26 +107,30 @@
 				<h2>Projetos em Destaque</h2>
 				<div class="projects-grid">
 					<div class="project-card">
-						<img src="project1.jpg" alt="Projeto 1" />
-						<h3>Alimentação para Todos</h3>
+						<img src="../src/recifesolidario.jpg" alt="Recife Solidário" />
+						<h3>Recife Solidário</h3>
 						<p>
-							Distribuição de alimentos para comunidades carentes em áreas urbanas.
+							Programa da Prefeitura de Recife que ajuda pessoas que sofreram
+							calamidades com doações de comida e outros items
 						</p>
 					</div>
 					<div class="project-card">
-						<img src="project2.jpg" alt="Projeto 2" />
-						<h3>Horta Comunitária</h3>
+						<img src="../src/presentation.jpg" alt="Vizinhos Solidários" />
+						<h3>Vizinhos Solidários</h3>
 						<p>
-							Ensinando famílias a cultivar seus próprios alimentos de forma
-							sustentável.
+							O projeto Vizinhos Solidários é um instituto dedicado a fornecer
+							refeições e cestas básicas na região do grande Recife e Olinda.
 						</p>
 					</div>
 					<div class="project-card">
-						<img src="project3.jpg" alt="Projeto 3" />
-						<h3>Educação Nutricional</h3>
+						<img src="../src/banho.jpg" alt="Projeto Banho Recife" />
+						<h3>Projeto Banho Recife</h3>
 						<p>
-							Promovendo uma alimentação saudável por meio da educação e da
-							conscientização.
+							Batizada de Banho Recife e também conhecida como Banho de Cidadania
+							Recife, inicialmente, a ação contava com um módulo de banho que era
+							utilizado pela população em situação de rua. Com a chegada de mais
+							voluntários, a iniciativa passou a oferecer refeições, roupas, cortes de
+							cabelo e outros serviços.
 						</p>
 					</div>
 				</div>
@@ -173,6 +177,7 @@
 				<p>&copy; 2024 Projeto ODS2 - Todos os direitos reservados.</p>
 			</div>
 		</footer>
+		<button class="back-to-top" onclick="scrollToTop()">↑</button>
 
 		<script src="../scripts/index.js"></script>
 	</body>
