ajustando a página de onde doar

--- a/pages/index.html
+++ b/pages/index.html
@@ -61,7 +61,7 @@
 			<div class="hero-text">
 				<h1>DOA + RECIFE</h1>
 				<p>Transformando vidas com solidariedade e ações sustentáveis.</p>
-				<button onclick="scrollToSection('#donation-locations')">
+				<button onclick="window.location.href='./where_to.html'">
 					Veja Locais de Doação
 				</button>
 			</div>
